Fix education image centering on mobile

--- a/src/pages/education/EducationComponent.css
+++ b/src/pages/education/EducationComponent.css
@@ -103,8 +103,4 @@
   .heading-div {
     flex-direction: column;
   }
-
-  .heading-img-div {
-    margin-left: 50px;
-  }
 }
